test/syntax-errors/strict-declaration.bb
Strict

Local a = 1 ; valid

b = 1 ; invalid
